[gd_scene load_steps=24 format=2]

[ext_resource path="res://stages/loadout/LoadoutTileData.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/theme.tres" type="Theme" id=2]
[ext_resource path="res://gui/fonts/FontHeading.tres" type="DynamicFont" id=3]
[ext_resource path="res://stages/loadout/LoadoutStage.gd" type="Script" id=4]
[ext_resource path="res://stages/loadout/world/LoadoutWorld.tscn" type="PackedScene" id=5]
[ext_resource path="res://content/map/Map.tscn" type="PackedScene" id=6]
[ext_resource path="res://stages/loadout/LoadoutCamera.gd" type="Script" id=7]
[ext_resource path="res://stages/loadout/LoadoutChoicePopup.gd" type="Script" id=8]
[ext_resource path="res://stages/loadout/HittableLetters.gd" type="Script" id=9]
[ext_resource path="res://gui/panels/panel_outside.tres" type="StyleBox" id=10]
[ext_resource path="res://stages/loadout/relic_chamber.png" type="Texture" id=11]
[ext_resource path="res://stages/loadout/PrestigePopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://stages/loadout/RelichuntPopup.tscn" type="PackedScene" id=13]
[ext_resource path="res://stages/loadout/dummy2.png" type="Texture" id=15]
[ext_resource path="res://stages/loadout/dummy.png" type="Texture" id=16]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=17]
[ext_resource path="res://stages/loadout/Monster.gd" type="Script" id=18]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=20]

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 45, 42 )

[sub_resource type="SpriteFrames" id=108]
animations = [ {
"frames": [ SubResource( 109 ) ],
"loop": false,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "halloween",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=34]
radius = 12.0
height = 8.0

[sub_resource type="Gradient" id=107]
offsets = PoolRealArray( 0.0683594, 0.160156, 0.322266, 0.931641 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 107 )

[node name="LoadoutStage" type="Node"]
script = ExtResource( 4 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="LoadoutWorld" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 12 )

[node name="Camera2D" type="Camera2D" parent="." groups=["cameras"]]
position = Vector2( 0, 34 )
current = true
zoom = Vector2( 0.333, 0.333 )
process_mode = 0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 7 )

[node name="LoadoutTileData" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( -12, 70 )

[node name="ShootableHeadline" type="HBoxContainer" parent="."]
margin_left = -319.0
margin_top = -152.0
margin_right = 1597.0
margin_bottom = 1.0
grow_horizontal = 2
rect_scale = Vector2( 0.333, 0.333 )
custom_constants/separation = 8
alignment = 1
script = ExtResource( 9 )

[node name="DomePosition" type="Position2D" parent="."]
position = Vector2( 0, 6 )

[node name="KeeperPosition1" type="Position2D" parent="."]
position = Vector2( -154, 131 )

[node name="KeeperPosition2" type="Position2D" parent="."]
position = Vector2( -256, 130 )

[node name="KeeperPosition3" type="Position2D" parent="."]
position = Vector2( -249, 121 )

[node name="KeeperPosition4" type="Position2D" parent="."]
position = Vector2( -148, 109 )

[node name="KeeperPosition5" type="Position2D" parent="."]
position = Vector2( -266, 107 )

[node name="KeeperPosition6" type="Position2D" parent="."]
position = Vector2( -266, 145 )

[node name="KeeperPosition7" type="Position2D" parent="."]
position = Vector2( -188, 106 )

[node name="Dummy" type="Area2D" parent="." groups=["monster"]]
position = Vector2( -88, 9 )
collision_layer = 128
collision_mask = 0
script = ExtResource( 18 )
techId = "dummy"

[node name="Sprite" type="AnimatedSprite" parent="Dummy"]
material = ExtResource( 17 )
position = Vector2( 1, -18 )
frames = SubResource( 108 )

[node name="HitboxDefault" type="CollisionShape2D" parent="Dummy"]
position = Vector2( 0, -17 )
shape = SubResource( 34 )

[node name="HitPosition" type="Position2D" parent="Dummy"]
position = Vector2( 25, -15 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2014.99, 48.3516 )
rotation = 1.5708
scale = Vector2( 0.0372184, 3955.05 )
z_index = 500
texture = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -556.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 611.0
margin_bottom = 556.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="Menu" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 615.0
margin_right = 1304.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/Menu"]
margin_left = 16.0
margin_top = 16.0
margin_right = 673.0
margin_bottom = 524.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/panel = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 625.0
margin_bottom = 476.0
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer"]
margin_right = 593.0
margin_bottom = 371.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 581.0
margin_bottom = 359.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 553.0
margin_bottom = 331.0
custom_constants/separation = 50

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 537.0
margin_bottom = 315.0
grow_horizontal = 2
custom_constants/vseparation = 10
custom_constants/hseparation = 60
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 14.0
margin_right = 227.0
margin_bottom = 37.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 20 )
text = "loadout.dome"
align = 1

[node name="Label5" type="Label" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 301.0
margin_right = 537.0
margin_bottom = 37.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 20 )
text = "loadout.keeper"
align = 1

[node name="DomeButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 47.0
margin_right = 241.0
margin_bottom = 104.0
text = "Laser Dome"

[node name="KeeperButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 301.0
margin_top = 47.0
margin_right = 537.0
margin_bottom = 104.0
text = "Engineer"

[node name="PetButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 114.0
margin_right = 241.0
margin_bottom = 171.0
text = "loadout.pet"

[node name="PetPlaceholder" type="Control" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
visible = false
margin_left = 301.0
margin_top = 114.0
margin_right = 537.0
margin_bottom = 171.0

[node name="SkinButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 301.0
margin_top = 114.0
margin_right = 537.0
margin_bottom = 171.0
text = "loadout.skin"

[node name="SkinPlaceholder" type="Control" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
visible = false
margin_top = 181.0
margin_right = 213.0
margin_bottom = 201.0

[node name="Control" type="Control" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 181.0
margin_right = 241.0
margin_bottom = 201.0
rect_min_size = Vector2( 0, 20 )

[node name="Control2" type="Control" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 301.0
margin_top = 181.0
margin_right = 537.0
margin_bottom = 201.0

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 211.0
margin_right = 241.0
margin_bottom = 248.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 20 )
text = "loadout.gadget"
align = 1

[node name="Label6" type="Label" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 312.0
margin_top = 211.0
margin_right = 525.0
margin_bottom = 248.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 20 )
text = "loadout.mode"
align = 1

[node name="GadgetButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 258.0
margin_right = 241.0
margin_bottom = 315.0
focus_neighbour_right = NodePath("../ModeButton")
focus_neighbour_bottom = NodePath("../GizmoButton")
text = "Orchard"

[node name="ModeButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 301.0
margin_top = 258.0
margin_right = 537.0
margin_bottom = 315.0
focus_neighbour_left = NodePath("../GadgetButton")
focus_neighbour_bottom = NodePath("../../../../../HBoxContainer/ProceedToSecondStageButton")
text = "Migration"

[node name="GizmoButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 325.0
margin_right = 241.0
margin_bottom = 382.0
focus_neighbour_top = NodePath("../GadgetButton")
focus_neighbour_right = NodePath("../ModeButton")
focus_neighbour_bottom = NodePath("../../../../../HBoxContainer/QuitLoadoutButton")
text = "Gizmo"

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer"]
visible = false
margin_left = 83.0
margin_top = 336.0
margin_right = 337.0
margin_bottom = 514.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer2"]
margin_left = 12.0
margin_top = 12.0
margin_right = 242.0
margin_bottom = 166.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer2/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 214.0
margin_bottom = 138.0

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_right = 198.0
margin_bottom = 37.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 20 )
text = "DIFFICULTY"
align = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 198.0
margin_bottom = 81.0
max_value = 2.0
value = 1.0
tick_count = 3

[node name="Label4" type="Label" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_left = 65.0
margin_top = 97.0
margin_right = 132.0
margin_bottom = 122.0
size_flags_horizontal = 4
text = "brutal"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer"]
margin_top = 387.0
margin_right = 593.0
margin_bottom = 444.0

[node name="QuitLoadoutButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 288.0
margin_bottom = 57.0
focus_neighbour_top = NodePath("../../PanelContainer/MarginContainer/VBoxContainer/GridContainer/GizmoButton")
size_flags_horizontal = 3
text = "loadout.abort"

[node name="ProceedToSecondStageButton" type="Button" parent="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 593.0
margin_bottom = 57.0
focus_neighbour_top = NodePath("../../PanelContainer/MarginContainer/VBoxContainer/GridContainer/ModeButton")
size_flags_horizontal = 3
text = "loadout.proceed"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 1308.0
margin_right = 1920.0
margin_bottom = 556.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Control" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 231.0
margin_right = 582.0
margin_bottom = 325.0
rect_min_size = Vector2( 500, 0 )
size_flags_vertical = 4
theme = ExtResource( 2 )

[node name="ModeTop" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/Control"]
margin_right = 552.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 20 )
text = "loadout.relic.top"
align = 1
autowrap = true

[node name="ModeTextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer/MarginContainer/Control"]
margin_top = 53.0
margin_right = 552.0
margin_bottom = 53.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="ModeBottom" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/Control"]
margin_top = 69.0
margin_right = 552.0
margin_bottom = 94.0
size_flags_horizontal = 3
text = "loadout.relic.bot"
align = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.533333 )

[node name="ChoicePopup" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
theme = ExtResource( 2 )
script = ExtResource( 8 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/ChoicePopup"]
margin_left = 948.0
margin_top = 528.0
margin_right = 972.0
margin_bottom = 552.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ChoicePopup/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 503.0
margin_bottom = 125.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ChoicePopup/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 475.0
margin_bottom = 97.0

[node name="PanelTitleLabel" type="Label" parent="CanvasLayer/ChoicePopup/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 459.0
margin_bottom = 65.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Choose your ???"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ChoicePopup/PanelContainer/MarginContainer/VBoxContainer"]
margin_bottom = 800.0
rect_min_size = Vector2( 0, 800 )
scroll_horizontal_enabled = false

[node name="ChoicesContainer" type="GridContainer" parent="CanvasLayer/ChoicePopup/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
margin_left = 229.0
margin_top = 81.0
margin_right = 229.0
margin_bottom = 81.0
size_flags_horizontal = 4
columns = 2

[node name="Tween" type="Tween" parent="CanvasLayer/ChoicePopup"]

[node name="RelichuntPopup" parent="CanvasLayer" instance=ExtResource( 13 )]
visible = false

[node name="PrestigePopup" parent="CanvasLayer" instance=ExtResource( 12 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -528.0
margin_top = -258.0
margin_right = 528.0
margin_bottom = 258.0

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/DomeButton" to="." method="_on_DomeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/KeeperButton" to="." method="_on_KeeperButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/PetButton" to="." method="_on_PetButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/SkinButton" to="." method="_on_SkinButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/GizmoButton" to="." method="_on_GizmoButton_pressed"] 
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/GadgetButton" to="." method="_on_GadgetButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer/ModeButton" to="." method="_on_ModeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/HBoxContainer/QuitLoadoutButton" to="." method="_on_QuitLoadoutButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Menu/PanelContainer/VBoxContainer/HBoxContainer/ProceedToSecondStageButton" to="." method="_on_ProceedToSecondStageButton_pressed"]
[connection signal="proceed" from="CanvasLayer/RelichuntPopup" to="." method="startRun"]
[connection signal="proceed" from="CanvasLayer/PrestigePopup" to="." method="startRun"]
